--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,6 +2,8 @@
 @tailwind components;
 @tailwind utilities;
 
+@import url("https://fonts.googleapis.com/css2?family=Gloock&display=swap");
+
 * {
   box-sizing: border-box;
   padding: 0;
@@ -11,5 +13,5 @@
 html,
 body {
   max-width: 100vw;
-  overflow-x: hidden;
+  box-sizing: border-box;
 }
