--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -4,7 +4,7 @@
 
 @layer components {
   .animationLeftRight {
-    @apply opacity-0 -translate-x-2 transition  ease-in;
+    @apply opacity-0 -translate-x-5 transition  ease-in duration-100;
   }
   .textInView {
     @apply opacity-100 transform-none;
@@ -16,7 +16,7 @@
     @apply font-Gloock text-6xl;
   }
   .animationTopBottom {
-    @apply opacity-0 -translate-y-10 transition delay-150 duration-300;
+    @apply opacity-0 -translate-y-10 transition delay-200 duration-300;
   }
 }
 
